feat: 🎸 use use-sound lib to play sounds

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@material-ui/styles": "^4.9.10",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "use-sound": "^1.0.2"
   },
   "devDependencies": {
     "@qbaepst/prettier-config": "^1.3.0",
