--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "react-scripts test",
     "commit": "git-cz",
     "lint": "eslint --cache .",
-    "format": "prettier --write '*.{html,js,json,md}'"
+    "format": "prettier --write '*.{html,js,json,md}'",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.10",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@qbaepst/prettier-config": "^1.3.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@testing-library/dom": "^7.2.2",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
@@ -25,6 +28,7 @@
     "eslint": "^6.8.0",
     "prettier": "^2.0.5",
     "react-scripts": "3.4.0",
+    "semantic-release": "^17.0.7",
     "typescript": "^3.8.3"
   },
   "browserslist": {
@@ -71,5 +75,28 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/quibaritaenperdresatrompe/pomodoro"
+  },
+  "release": {
+    "repositoryUrl": "https://github.com/quibaritaenperdresatrompe/pomodoro",
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/npm",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "docs/CHANGELOG.md"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "docs/CHANGELOG.md",
+            "package.json"
+          ]
+        }
+      ]
+    ]
   }
 }
