--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "eslintIgnore": [
+    "build"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
